[package]
name = "graph-visualizer"
version = "0.1.0"
edition = "2021"
authors = ["Felipe Rodrigues de Santana Freitag"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_prototype_lyon = "0.7.2"
bevy_rapier2d = { version = "0.20.0", features = ["simd-stable"] }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
